--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
+    "pretest": "npm run compile",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "pack": "vsce package",
+    "publish": "vsce publish"
   },
   "extensionDependencies": [
     "vscode.powershell",
