--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "14.x",
     "eslint": "^7.27.0",
+    "esbuild": "^0.12.12",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "glob": "^7.1.7",
