updated ansi-regex and docs updates

--- a/.azure-pipelines/azure-pipelines.yaml
+++ b/.azure-pipelines/azure-pipelines.yaml
@@ -15,6 +15,9 @@ trigger:
     include:
     - 'main'
     - 'release/*'
+  paths:
+    exclude: 
+    - ./*.md
   tags:
     include:
     - 'v1.*'
