--- a/package.json
+++ b/package.json
@@ -74,17 +74,17 @@
   ],
   "devDependencies": {
     "@types/vscode": "^1.58.0",
-    "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "14.x",
-    "eslint": "^7.27.0",
-    "esbuild": "^0.12.12",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
-    "glob": "^7.1.7",
-    "mocha": "^8.4.0",
-    "typescript": "^4.3.2",
-    "vsce": "^1.95.0",
-    "vscode-test": "^1.5.2"
+    "@types/glob": "^7.2.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.16",
+    "eslint": "^8.8.0",
+    "esbuild": "^0.14.20",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "glob": "^7.2.0",
+    "mocha": "^9.2.0",
+    "typescript": "^4.5.5",
+    "vsce": "^2.6.7",
+    "vscode-test": "^1.6.1"
   }
 }
