--- a/.azure-pipelines/jobs/test.yaml
+++ b/.azure-pipelines/jobs/test.yaml
@@ -16,6 +16,9 @@ parameters:
   default: 'Release'
 - name: imageName
   type: string
+- name: pwsh
+  type: boolean
+  default: true
 
 jobs:
 - job: '${{ parameters.name }}'
@@ -44,9 +47,12 @@ jobs:
       path: $(Build.SourcesDirectory)/out/package
 
   # Run tests
-  - powershell: |-
-      npm install
-     # npm test
+  - task: PowerShell@2
+    inputs:
+      pwsh: ${{ parameters.pwsh }}
+      targetType: inline
+      script: |-
+        npm install
     displayName: 'Test extension'
     env:
       DISPLAY: ':99.0'
