--- a/package.json
+++ b/package.json
@@ -73,18 +73,20 @@
     "msazurermtools.azurerm-vscode-tools"
   ],
   "devDependencies": {
-    "@types/vscode": "^1.85.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.4",
-    "eslint": "^8.56.0",
-    "esbuild": "^0.19.11",
+    "@types/node": "^20.11.5",
+    "@types/vscode": "^1.85.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
+    "esbuild": "^0.19.11",
+    "eslint": "^8.56.0",
     "glob": "^10.3.10",
     "mocha": "^10.2.0",
     "typescript": "^5.3.3",
-    "vsce": "^2.15.0",
     "vscode-test": "^1.6.1"
+  },
+  "dependencies": {
+    "@vscode/vsce": "^2.22.0"
   }
 }
