--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,6 @@ updates:
 - package-ecosystem: 'npm'
   directory: '/'
   schedule:
-    interval: 'daily'
+    interval: 'monthly'
   labels:
   - 'dependencies'
